# slidev-report-template

./: .gitignore  Cargo.toml  Makefile  README.md  package.json  pnpm-lock.yaml  pyproject.toml  slides.md
src/: argparse.rs  main.rs
