[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.17", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
warp = "0.3"
log = "0.4.17"
pretty_env_logger = "0.4.0"
